# wikitablequestions-llm

./: .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  entrypoint.sh  pyproject.toml
.github/workflows/: main_workflow.yaml
google-cloud-infrastructure-tf/google-artifact-registry-repository/: backend.tf  main.tf  providers.tf  variables.tf
google-cloud-infrastructure-tf/google-basics-to-init/: api-services.tf  storage.tf  terraform.tfstate  terraform.tfstate.backup
google-cloud-infrastructure-tf/google-github-actions/: backend.tf  main.tf  providers.tf
wikitablequestions-llm-service-core/main/wikitablequestions_llm_service_core/: create_sql_tables.py  dataframes.py  extract_wikitables_infos.py  main.py  table_retriever.py
wikitablequestions-llm-service-core/main/wikitablequestions_llm_service_core/entities/: table_info.py
wikitablequestions-llm-service-core/main/wikitablequestions_llm_service_core/handlers/: dataframes.py  extract_wikitables_infos.py  query_pipeline.py  response_pqrser_to_sql.py  save_network.py  sql_retriever.py  table_retriever.py
wikitablequestions-llm-service-core/main/wikitablequestions_llm_service_core/models_handlers/: embed_model_handler.py  llm_model_handler.py
wikitablequestions-llm-service-core/main/wikitablequestions_llm_service_core/prompts_templates/: __init__.py
wikitablequestions-llm-service/main/wikitablequestions_llm_service/: main.py
wikitablequestions-llm-service/main/wikitablequestions_llm_service/services/: health_service.py  responses.py  wikitablequestions_llm_service.py
(+59 files in other folders)
